# flute

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: claude-code-review.yml  claude.yml  server-tests.yml  web-preview-cleanup.yml  web-preview.yml  web-tests.yml
server/: .dockerignore  .env.example  .flaskenv  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  app.py  pyproject.toml  requirements.txt
server/src/: app.py  cli.py  config.py  schemas.py
server/src/api/: __init__.py  books.py  images.py  languages.py  routes.py  terms.py
server/src/models/: __init__.py  base.py  book.py  books.py  chapter.py  images.py  language.py  user.py
server/src/parse/: __init__.py  base.py  character_parser.py  mecab_parser.py  registry.py  space_delimited_parser.py
server/test/: CLAUDE.md  conftest.py  test_api.py  test_models.py
server/test/api/: test_books.py  test_images.py  test_languages.py  test_routes.py  test_terms.py
server/test/models/: test_base.py  test_books.py  test_language.py
server/test/parse/: conftest.py  test_ClassicalChineseParser.py  test_JapaneseParser.py  test_SpaceDelimitedParser.py  test_TurkishParser.py  test_base.py  test_classical_chinese_parser.py  test_japanese_parser.py  test_registry.py  test_space_delimited_parser.py  test_turkish_parser.py
web/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  PWABadge.test.tsx  index.css  main.tsx  theme.ts
web/src/__tests__/components/: BookReaderPage.test.tsx  ErrorBoundary.test.tsx  ReaderSettingsModal.test.tsx
web/src/__tests__/hooks/: useDebounce.test.ts  usePersistedState.test.ts
web/src/api/: ApiProvider.test.tsx  ApiProvider.tsx  README.md  client.test.ts  client.ts  index.ts  types.ts
web/src/components/: BookReader.test.tsx  BookReader.tsx  BookReaderPage.tsx  BookTile.test.tsx  BookTile.tsx  BookUpload.test.tsx  BookUpload.tsx  BooksLandingPage.test.tsx  BooksLandingPage.tsx  BooksSortControls.test.tsx  BooksSortControls.tsx  ErrorBoundary.tsx  LanguageChooser.tsx  ReaderSettingsModal.tsx
web/src/constants/: reader.ts
web/src/data/: bookApi.ts  booksService.ts  mockBookPages.ts  mockBooks.ts
web/src/data/__tests__/: booksService.test.ts
web/src/hooks/: useBookProgress.ts  useDebounce.ts  usePersistedState.ts  useUserPreferences.ts
web/src/store/: StoreProvider.tsx  atoms.ts
web/src/store/__tests__/: atoms.test.ts
web/src/test/: setup.ts  smoke.test.tsx
web/src/test/mocks/: pwa-register.ts
web/src/types/: book.ts  reader.ts  sorting.ts
web/src/utils/: chapterCache.ts
